--- a/AgentServices-Core/init_store.conf
+++ b/AgentServices-Core/init_store.conf
@@ -1,39 +1,41 @@
 {
-	"agentservices.core": {
-		"id": "f1a48b74-6a4a-455a-858d-a6b7798cb71c",
-		"appBizNetworkId": "f5bc533a-d417-4d71-ad94-8c766907381b",
-		"networkMode": "Local",
-		"privateNetworkMode": "Rabbit",
-		"public": {
-			"self": {
-				"host": "127.0.0.1",
-				"port": 6000
-			},
-			"acquaintances": {
-			}
-		},
-		"private": {
-			"self": {
-				"host": "127.0.0.1",
-				"port": 4000
-			},
-			"acquaintances": {
-				"a1": {
+	"agentservices": {
+		"core": {
+			"id": "f1a48b74-6a4a-455a-858d-a6b7798cb71c",
+			"appBizNetworkId": "f5bc533a-d417-4d71-ad94-8c766907381b",
+			"networkMode": "Local",
+			"privateNetworkMode": "Rabbit",
+			"public": {
+				"self": {
 					"host": "127.0.0.1",
-					"port": 5672
+					"port": 6000
+				},
+				"acquaintances": {
 				}
 			},
-			"rabbit": {
-				"host": "127.0.0.1",
-				"port": 5672,
-				"userId": "kvdb",
-				"password": "anywhere"
-			}
-		},
-		"db": {
-			"self": {
-				"host": "127.0.0.1",
-				"port": 5000
+			"private": {
+				"self": {
+					"host": "127.0.0.1",
+					"port": 4000
+				},
+				"acquaintances": {
+					"a1": {
+						"host": "127.0.0.1",
+						"port": 5672
+					}
+				},
+				"rabbit": {
+					"host": "127.0.0.1",
+					"port": 5672,
+					"userId": "kvdb",
+					"password": "anywhere"
+				}
+			},
+			"db": {
+				"self": {
+					"host": "127.0.0.1",
+					"port": 5000
+				}
 			}
 		}
 	}
