--- a/IAServices/init_ui.conf
+++ b/IAServices/init_ui.conf
@@ -1,24 +1,26 @@
 {
-	"agentservices.core": {
-		"id": "9707A0D9-DA93-493e-9906-1E1CF73200F4",
-		"appBizNetworkId": "f5bc533a-d417-4d71-ad94-8c766907381b",
-		"privateNetworkMode": "Rabbit",
-		"private": {
-			"self": {
-				"host": "127.0.0.1",
-				"port": 5672
-			},
-			"acquaintances": {
-				"a1": {
+	"agentservices": {
+		"core": {
+			"id": "9707A0D9-DA93-493e-9906-1E1CF73200F4",
+			"appBizNetworkId": "f5bc533a-d417-4d71-ad94-8c766907381b",
+			"privateNetworkMode": "Rabbit",
+			"private": {
+				"self": {
 					"host": "127.0.0.1",
-					"port": 4000
+					"port": 5672
+				},
+				"acquaintances": {
+					"a1": {
+						"host": "127.0.0.1",
+						"port": 4000
+					}
+				},
+				"rabbit": {
+					"host": "127.0.0.1",
+					"port": 5672,
+					"userId": "kvdb",
+					"password": "anywhere"
 				}
-			},
-			"rabbit": {
-				"host": "127.0.0.1",
-				"port": 5672,
-				"userId": "kvdb",
-				"password": "anywhere"
 			}
 		}
 	}
