--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <specialk.version>1.1.4.2</specialk.version>
+        <specialk.version>1.1.4.1-IA</specialk.version>
         <scala.version>2.10.0</scala.version>
         <scala.versionsuffix>2.10</scala.versionsuffix>
         <casbah.version>2.5.1</casbah.version>
