--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-store-ia</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -249,6 +249,12 @@
             <groupId>org.scalesxml</groupId>
             <artifactId>scales-jaxen_2.10</artifactId>
             <version>0.4.5</version>
+	    <exclusions>
+	      <exclusion>
+		<groupId>jaxen</groupId>
+		<artifactId>jaxen</artifactId>
+	      </exclusion>
+	    </exclusions>
         </dependency>
 
         <!-- Test -->
