--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -163,7 +163,8 @@
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.4.2</version>
+            <!-- version>1.4.2</version -->
+	    <version>1.4.4</version>
         </dependency>
 
         <dependency>
