--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -160,6 +160,12 @@
             <version>3.2.4</version>
         </dependency>
 
+	<dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.10</artifactId>
+            <version>3.2.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
