--- a/AgentServices-Store/eval.conf
+++ b/AgentServices-Store/eval.conf
@@ -6,3 +6,9 @@ DSLCommLinkServerHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
 DSLCommLinkServerPort = 5672
 DSLCommLinkClientHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 DSLCommLinkClientPort = 5672
+DSLEvaluatorHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+DSLEvaluatorPort = 5672
+DSLEvaluatorData = "dieselProtocol"
+DSLEvaluatorPreferredSupplierHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+DSLEvaluatorPreferredSupplierPort = 5672
+DSLEvaluatorNetwork = { }
