--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -306,9 +306,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.1</version>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.1.6</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
                     <charset>${project.build.sourceEncoding}</charset>
@@ -325,6 +325,8 @@
                         <!-- <arg>-unchecked</arg> -->
                         <arg>-P:continuations:enable</arg>
                     </args>
+                    <recompileMode>incremental</recompileMode>
+                    <useZincServer>true</useZincServer>
                     <compilerPlugins>
                         <compilerPlugin>
                             <groupId>org.scala-lang.plugins</groupId>
