--- a/AgentServices-Store/eval.server.conf
+++ b/AgentServices-Store/eval.server.conf
@@ -7,3 +7,7 @@ DSLCommLinkServerPort = 5672
 DSLCommLinkClientHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
 DSLCommLinkClientPort = 5672
 TestGitBranch = true
+BFactoryCommLinkServerHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
+BFactoryCommLinkServerPort = 5672
+BFactoryCommLinkClientHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+BFactoryCommLinkClientPort = 5672
