--- a/AgentServices-Store/eval.client.conf
+++ b/AgentServices-Store/eval.client.conf
@@ -10,3 +10,15 @@ BFactoryCommLinkServerHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com
 BFactoryCommLinkServerPort = 5672
 BFactoryCommLinkClientHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkClientPort = 5672
+BFactoryMap = {
+  introductionInitiator = { 
+    cnxn = "put in some textual representation of a cnxn here"
+    label = "behaviors( introduction( initiator( true ), Alias ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionInitiator"
+    }
+  introductionRecipient = { 
+    cnxn = "put in some textual representation of a cnxn here"
+    label = "behaviors( introduction( recipient( true ), Cnxn ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionRecipient"
+    }     
+}
