--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -141,13 +141,15 @@
         <dependency>
             <groupId>org.json4s</groupId>
             <artifactId>json4s-jackson_2.10</artifactId>
-            <version>3.2.4</version>
+            <!-- version>3.2.4</version -->
+            <version>3.2.7</version>
         </dependency>
 
         <dependency>
             <groupId>org.json4s</groupId>
             <artifactId>json4s-native_2.10</artifactId>
-            <version>3.2.4</version>
+            <!-- version>3.2.4</version -->
+            <version>3.2.7</version>
         </dependency>
 
         <dependency>
