--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -126,16 +126,28 @@
         </dependency>
 
         <dependency>
-            <groupId>org.basex</groupId>
-            <artifactId>basex-api</artifactId>
-            <version>7.6</version>
+          <groupId>org.basex</groupId>
+          <artifactId>basex-api</artifactId>
+          <version>7.6</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-nop</artifactId>
+            </exclusion>       
+          </exclusions>  
         </dependency>
 
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>casbah_${scala.versionsuffix}</artifactId>
-            <version>${casbah.version}</version>
-            <type>pom</type>
+          <groupId>org.mongodb</groupId>
+          <artifactId>casbah_${scala.versionsuffix}</artifactId>
+          <version>${casbah.version}</version>
+          <type>pom</type>
+          <exclusions>
+            <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-api</artifactId>
+            </exclusion>       
+          </exclusions>    
         </dependency>
 
         <dependency>
@@ -183,9 +195,10 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <!--version>1.2.16</version-->
+          <version>1.2.17</version>
         </dependency>
 
         <dependency>
@@ -237,11 +250,11 @@
             <version>1.3.3</version>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.scalaxb</groupId>
             <artifactId>scalaxb</artifactId>
             <version>local-update</version>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.scalesxml</groupId>
@@ -249,7 +262,7 @@
             <version>0.4.5</version>
         </dependency>
 
-        <dependency>
+        <!-- dependency>
             <groupId>org.scalesxml</groupId>
             <artifactId>scales-jaxen_2.10</artifactId>
             <version>0.4.5</version>
@@ -259,7 +272,7 @@
                 <artifactId>jaxen</artifactId>
               </exclusion>
             </exclusions>
-        </dependency>
+        </dependency-->
 
         <!-- Test -->
         <dependency>
