--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -12,13 +12,17 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <specialk.version>1.1.8.0</specialk.version>
+        <!--specialk.version>1.1.8.0</specialk.version-->
+        <specialk.version>1.1.8.1</specialk.version>
         <!-- scala.version>2.10.0</scala.version -->
-        <scala.version>2.10.2</scala.version>
-        <scala.versionsuffix>2.10</scala.versionsuffix>
+        <!--scala.version>2.10.2</scala.version-->
+        <scala.version>2.11.0</scala.version>
+        <!--scala.versionsuffix>2.10</scala.versionsuffix-->
+        <scala.versionsuffix>2.11</scala.versionsuffix>
         <!-- casbah.version>2.5.1</casbah.version-->
         <!--casbah.version>2.6.2</casbah.version-->
-        <casbah.version>2.6.4</casbah.version>
+        <!--casbah.version>2.6.4</casbah.version-->
+        <casbah.version>2.7.3</casbah.version>
         <scala.test.specs2.version>1.14</scala.test.specs2.version>
         <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -88,14 +92,28 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>jline</artifactId>
-            <version>${scala.version}</version>
+            <!-- version>${scala.version}</version -->
+            <version>2.11.0-M3</version>
         </dependency>
         <dependency>
           <groupId>org.scala-lang</groupId>
           <artifactId>scala-reflect</artifactId>
           <version>${scala.version}</version>
         </dependency>            
-    
+        <dependency>
+          <groupId>org.scala-lang.plugins</groupId>
+          <!-- artifactId>scala-continuations-library_2.11</artifactId -->
+          <artifactId>scala-continuations-library_2.11</artifactId>
+          <!-- version>1.0.2</version -->
+          <version>1.0.1</version>
+        </dependency>
+        <dependency>
+          <groupId>org.scala-lang.plugins</groupId>
+          <!-- artifactId>scala-continuations-library_2.11</artifactId -->
+          <artifactId>scala-continuations-plugin_2.11.0</artifactId>
+          <!-- version>1.0.2</version -->
+          <version>1.0.1</version>
+        </dependency>
         <dependency>
             <groupId>com.biosimilarity.lift</groupId>
             <artifactId>specialK</artifactId>
@@ -341,14 +359,16 @@
                         <!-- <arg>-unchecked</arg> -->
                         <arg>-P:continuations:enable</arg>
                     </args>
-                    <recompileMode>incremental</recompileMode>
+                    <!-- recompileMode>incremental</recompileMode -->
                     <useZincServer>true</useZincServer>
                     <compilerPlugins>
                         <compilerPlugin>
                             <groupId>org.scala-lang.plugins</groupId>
-                            <artifactId>continuations</artifactId>
-                            <version>${scala.version}</version>
+                            <!-- artifactId>continuations</artifactId -->
+                            <artifactId>scala-continuations-plugin_2.11.0</artifactId>
+                            <!-- version>${scala.version}</version -->
                             <!--                            <version>2.10.0-SNAPSHOT</version>-->
+                            <version>1.0.1</version>
                         </compilerPlugin>
                     </compilerPlugins>
                     <launchers>
