--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-store-ia</artifactId>
-    <version>1.9.2-SNAPSHOT</version>
+    <version>1.9.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -171,17 +171,21 @@
         </dependency>
 
         <dependency>
-            <groupId>org.json4s</groupId>
-            <artifactId>json4s-jackson_2.10</artifactId>
-            <!-- version>3.2.4</version -->
-            <version>3.2.7</version>
+          <groupId>org.json4s</groupId>
+          <!--artifactId>json4s-jackson_2.10</artifactId-->
+          <artifactId>json4s-jackson_2.11</artifactId>
+          <!-- version>3.2.4</version -->
+          <!--version>3.2.7</version-->
+          <version>3.2.10</version>
         </dependency>
 
         <dependency>
             <groupId>org.json4s</groupId>
-            <artifactId>json4s-native_2.10</artifactId>
+            <!--artifactId>json4s-native_2.10</artifactId-->
+            <artifactId>json4s-native_2.11</artifactId>
             <!-- version>3.2.4</version -->
-            <version>3.2.7</version>
+            <!--version>3.2.7</version-->
+            <version>3.2.10</version>
         </dependency>
 
         <dependency>
