--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-store-ia</artifactId>
-    <version>1.9.3-SNAPSHOT</version>
+    <version>1.9.3-NR-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -93,8 +93,8 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>jline</artifactId>
-            <!-- version>${scala.version}</version -->
-            <version>2.11.0-M3</version>
+            <version>${scala.version}</version>
+            <!-- version>2.11.0-M3</version -->
         </dependency>
         <dependency>
           <groupId>org.scala-lang</groupId>
